# Copyright (c) 2022-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
import("//foundation/multimedia/media_foundation/config.gni")
group("plugin_std_stream_source") {
  if (hst_is_standard_sys) {
    deps = [ ":histreamer_plugin_StdStreamSource" ]
  }
}

if (hst_is_standard_sys) {
  import("//build/ohos.gni")
  ohos_shared_library("histreamer_plugin_StdStreamSource") {
    subsystem_name = "multimedia"
    part_name = "media_foundation"
    include_dirs = [
      "//foundation/multimedia/player_framework/interfaces/inner_api/native",
      "//foundation/multimedia/player_framework/services/utils/include",
      "//foundation/multimedia/media_foundation/engine/include",
      "//commonlibrary/c_utils/base/include",
    ]
    sources = [ "std_stream_source_plugin.cpp" ]
    public_configs = [
      "//foundation/multimedia/media_foundation:histreamer_presets",
      "//foundation/multimedia/player_framework/services/utils:media_service_utils_public_config",
    ]
    public_deps = [
      "//foundation/multimedia/media_foundation/engine/foundation:histreamer_foundation",
      "//foundation/multimedia/media_foundation/engine/plugin:histreamer_plugin_base",
    ]
    external_deps = [
      "graphic_surface:surface",
      "hilog:libhilog",
      "player_framework:media_service_utils",
    ]

    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
    }
    relative_install_dir = "media/histreamer_plugins"
  }
}
