# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_foundation/config.gni")

module_output_path = "audio_framework/audio_framework_media_monitor"
media_monitor_gen_dir = get_label_info("../../../:media_monitor_interface", "target_gen_dir")

group("media_monitor_dt_test") {
  testonly = true
  deps = [ ":media_monitor_dt_unittest" ]
}

media_monitor_dt_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fexceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Dprivate=public",
  "-Dprotected=public",
]

ohos_unittest("media_monitor_dt_unittest") {
  module_out_path = module_output_path

  include_dirs = [
    "./include",
    "../../../buffer/include",
    "../../../client/include",
    "../../../common/include",
    "../../../server/include",
    "../../../../../interface/inner_api/",
    "../../../../../interface/inner_api/buffer/",
    "../../../../../interface/inner_api/common/",
    media_monitor_gen_dir,
  ]

  defines = [ "MEDIA_OHOS" ]

  cflags = media_monitor_dt_cflags

  sources = [ "./src/media_monitor_dt_test.cpp" ]

  deps = [
    "../../../:media_monitor",
    "../../../:media_monitor_client",
    "../../../:media_monitor_common",
    "../../../:media_monitor_interface",
    "../../../:media_monitor_wrapper",
  ]

  external_deps = [
    "ability_base:want",
    "audio_framework:audio_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "ffmpeg:libohosffmpeg",
  ]

  if (has_hisysevent_part) {
    defines += [ "MONITOR_ENABLE_HISYSEVENT" ]
    external_deps += [ "hisysevent:libhisysevent" ]
  }
}
