# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/media_foundation/config.gni")

module_output_path = "media_foundation/unittest"

group("media_monitor_manger_unit_test") {
  testonly = true
  deps = [ ":monitor_manager_unit_test" ]
}

###############################################################################################################monitor
monitor_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fexceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Dprivate=public",
  "-Dprotected=public",
]

ohos_unittest("monitor_manager_unit_test") {
  module_out_path = module_output_path
  include_dirs = [ "./include" ]

  defines = [ "MEDIA_OHOS" ]

  cflags = monitor_unittest_cflags

  sources = [ "./src/media_monitor_manager_unit_test.cpp" ]

  deps = [
    "../../../:media_monitor_client",
    "../../../:media_monitor_common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}
