# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")

ohos_ndk_headers("video_processing_ndk_headers") {
  dest_dir = "$ndk_headers_out_dir/multimedia/video_processing_engine"
  sources = [
    "../video_processing.h",
    "../video_processing_types.h",
  ]
}

ohos_ndk_library("libvideo_processing_ndk") {
  ndk_description_file = "./libvideo_processing.ndk.json"
  output_name = "video_processing"
  output_extension = "so"
  min_compact_version = "12"
  system_capability = "SystemCapability.Multimedia.VideoProcessingEngine"
  system_capability_headers = [
    "multimedia/video_processing_engine/video_processing_types.h",
    "multimedia/video_processing_engine/video_processing.h",
  ]
}
